deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fusion-spectra
  namespace: fusion
spec:
  selector:
    app: fusion-spectra
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30082
